--- a/ElectricityWeb/Content/css/site.css
+++ b/ElectricityWeb/Content/css/site.css
@@ -1,11 +1,10 @@
 ﻿html, body {
-  height: 100%; }
+  height: 100%;
+  background-color: white; }
 
-.input-group {
-  width: 80%; }
-
-.input-group-addon {
-  width: 30%; }
+header {
+  background-color: #1565c0;
+  height: 140px; }
 
 .input-validation-error {
   background-color: #f7adad;
@@ -14,19 +13,20 @@
 .error {
   color: #a12525; }
 
-.page-logo {
-  float: left;
-  width: 20%; }
+.container {
+  height: 100%; }
 
-img.visualizing {
-  width: 200px;
+.calcs.card {
+  height: 700px; }
+  .calcs.card .card-image {
+    height: 600px; }
+  .calcs.card .card-content {
+    height: 100px; }
+
+.input-validation-error {
+  border-bottom: 1px solid #F44336 !important; }
+
+.small.card.preview .card-image {
   height: 200px; }
-
-input[type="text"] {
-  border: 1px solid #fff; }
-  input[type="text"]:focus {
-    border: 2px solid #fff;
-    font-weight: 700; }
-
-h1 {
-  font-size: 32pt; }
+.small.card.preview .card-action {
+  height: 100px; }
