--- a/ElectricityWeb/Content/css/site.scss
+++ b/ElectricityWeb/Content/css/site.scss
@@ -2,18 +2,17 @@
 
 html, body {
     height: 100%;
+    background-color: $body-background-color;
 }
 
-body {
-    //background-color: $body-background-color;
+.main {
+    //background-color: $main-background-color;
+    //height: 80%;
 }
 
-.input-group {
-    width: 80%;
-}
-
-.input-group-addon {
-    width: 30%;
+header {
+    background-color: $header-background-color;
+    height: 140px;
 }
 
 .input-validation-error {
@@ -25,29 +24,31 @@ body {
     color: $error-text-color;
 }
 
-.page-logo {
-    float: left;
-    width: 20%;
+.container {
+    height: 100%;
 }
 
-img.visualizing {
-    width: 200px;
-    height: 200px;
-}
-
-
-@mixin input-border($thickness){
-    border: $thickness solid $input-border-color;
-}
-
-input[type="text"] {
-    @include input-border(1px);
-    &:focus {
-        @include input-border(2px);
-        font-weight: 700;
+.calcs {
+    &.card {
+        height: 700px;
+        .card-image {
+            height: 600px;
+        } 
+        .card-content {
+            height: 100px;
+        }
     }
 }
 
-h1 {
-    font-size: 32pt;
+.input-validation-error {
+    border-bottom: 1px solid #F44336 !important;
+}
+
+.small.card.preview {
+    .card-image {
+        height: 200px;
+    }
+    .card-action {
+        height: 100px;
+    }
 }
