--- a/ElectricityWeb/Views/Loss/Transformator.cshtml
+++ b/ElectricityWeb/Views/Loss/Transformator.cshtml
@@ -14,6 +14,6 @@
     </div>
     <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">Расчет потерь в трансформаторе <i class="mdi-navigation-close right"></i></span>
-        @Html.Partial("TransformatorResults")
+        @Html.Partial("_TransformatorResults")
     </div>
 </div>
