--- a/ElectricityWeb/Views/Loss/Transmission.cshtml
+++ b/ElectricityWeb/Views/Loss/Transmission.cshtml
@@ -14,6 +14,6 @@
     </div>
     <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">Расчет потерь в линиях электропередач <i class="mdi-navigation-close right"></i></span>
-        @Html.Partial("TransmissionResults")
+        @Html.Partial("_TransmissionResults")
     </div>
 </div>
