--- a/ElectricityWeb/Views/Line/Choose.cshtml
+++ b/ElectricityWeb/Views/Line/Choose.cshtml
@@ -14,6 +14,6 @@
     </div>
     <div class="card-reveal">
         <span class="card-title grey-text text-darken-4">Расчет сечения провода <i class="mdi-navigation-close right"></i></span>
-        @Html.Partial("LinesResult")
+        @Html.Partial("_LinesResult")
     </div>
 </div>
